Пример использования файла конфигурации на "горячую"

--- a/WebStore/appsettings.json
+++ b/WebStore/appsettings.json
@@ -8,5 +8,5 @@
   },
   "AllowedHosts": "*",
 
-  "greetings": "Hello World!!!"
+  "greetings": "This 'greetins' can be a connection string to the DataBase!"
 }
