--- a/WebStore/WebStore.csproj
+++ b/WebStore/WebStore.csproj
@@ -15,4 +15,8 @@
     <Folder Include="wwwroot\lib\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebStore.Domain\WebStore.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
