Добавил сервис для работы с БД SQL, добавил инициализацию контекста

--- a/WebStore/appsettings.json
+++ b/WebStore/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WebStore-DB;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,6 +10,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
   "AllowedHosts": "*",
 
   "greetings": "This 'greetins' can be a connection string to the DataBase!"
