--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,9 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 **/wwwroot/lib
+**/wwwroot/js/site.min.js.gz
+**/wwwroot/js/site.min.js
+**/wwwroot/js/site.js
+**/wwwroot/js/contact.js
+**/wwwroot/css/site.min.css
+**/wwwroot/css/site.css
