--- a/WebStore/bundleconfig.json
+++ b/WebStore/bundleconfig.json
@@ -2,8 +2,24 @@
   {
     "outputFileName": "wwwroot/css/site.css",
     "inputFiles": [
+      "wwwroot/css/main.css",
       "wwwroot/css/animate.css",
-      "wwwroot/css/responsive.css"
+      "wwwroot/css/responsive.css",
+      "wwwroot/css/price-range.css"
     ]
+  },
+  {
+    "outputFileName": "wwwroot/js/site.js",
+    "inputFiles": [
+      "wwwroot/js/contact.js",
+      "wwwroot/js/gmap.js",
+      "wwwroot/js/price-range.js",
+      "wwwroot/js/main.js"
+    ],
+    "minify": {
+      "enabled": true,
+      "renameLocals": true,
+      "gzip": true
+    }
   }
 ]
