--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -13,5 +13,7 @@
 
   "AllowedHosts": "*",
 
+  "WebApiUrl":  "http://localhost:5001",
+
   "greetings": "This 'greetins' can be a connection string to the DataBase!"
 }
