--- a/.gitignore
+++ b/.gitignore
@@ -345,3 +345,5 @@ healthchecksdb
 **/wwwroot/js/contact.js
 **/wwwroot/css/site.min.css
 **/wwwroot/css/site.css
+/Services/WebStore.ServiceHosting/WebStore.ServiceHosting.xml
+/Common/WebStore.Domain/WebStore.Domain.xml
