Исправил маршрут для апи контроллера продуктов, отклбчил запуск сваггера в браузере, потестил логирование

--- a/Services/WebStore.ServiceHosting/Properties/launchSettings.json
+++ b/Services/WebStore.ServiceHosting/Properties/launchSettings.json
@@ -30,7 +30,7 @@
     "WebStore.ServiceHosting.Swagger": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5001",
       "environmentVariables": {
