кинфиги log4net

--- a/Services/WebStore.ServiceHosting/WebStore.ServiceHosting.csproj
+++ b/Services/WebStore.ServiceHosting/WebStore.ServiceHosting.csproj
@@ -10,6 +10,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="log4net.config.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="log4net.config.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.12" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
