Начало формирование фронта

--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -56,7 +56,7 @@
           {
             "Name": "File",
             "Args": {
-              "path": "%TEMP%\\Logs\\serilog-configuration-sample.log",
+              "path": "Logs/WebStore.{Date}.log",
               "outputTemplate": "{Timestamp:o} [{Level:u3}] ({Application}/{MachineName}/{ThreadId}) {SourceContext} {Message}{NewLine}{Exception}"
             }
           }
